[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = [ "derive", "cargo" ] }
anyhow = "1.0"
ed25519-dalek = "1"
rand = "0.8.5"
rand_core = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
serde_bytes = "0.11.14"